TFP-6059 oppslagstjenester fra mottak