@@ -3,8 +3,9 @@ package no.nav.foreldrepenger.oversikt.aareg;
 import java.math.BigDecimal;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
+import java.time.Period;
 import java.util.List;
-import java.util.Map;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -12,10 +13,15 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import no.nav.foreldrepenger.common.domain.Fødselsnummer;
 import no.nav.fpsak.tidsserie.LocalDateInterval;
+import no.nav.fpsak.tidsserie.LocalDateSegment;
+import no.nav.fpsak.tidsserie.LocalDateTimeline;
+import no.nav.fpsak.tidsserie.StandardCombinators;
 
 
 @ApplicationScoped
 public class ArbeidsforholdTjeneste {
+
+    private static final Period TID_TILBAKE = Period.ofYears(3);
 
     private AaregRestKlient aaregRestKlient;
 
@@ -28,36 +34,55 @@ public class ArbeidsforholdTjeneste {
         this.aaregRestKlient = aaregRestKlient;
     }
 
-    public Map<ArbeidsforholdIdentifikator, List<Arbeidsforhold>> finnArbeidsforholdForIdentIPerioden(Fødselsnummer ident, LocalDate fom, LocalDate tom) {
-        return aaregRestKlient.finnArbeidsforholdForArbeidstaker(ident.value(), fom, tom, true).stream()
-            .map(arbeidsforhold -> mapArbeidsforholdRSTilDto(arbeidsforhold, fom, tom))
-            .collect(Collectors.groupingBy(Arbeidsforhold::arbeidsforholdIdentifikator));
+    public List<Arbeidsforhold> finnAktiveArbeidsforholdForIdent(Fødselsnummer ident) {
+        var spørFra = LocalDate.now().minus(TID_TILBAKE);
+        return aaregRestKlient.finnArbeidsforholdForArbeidstaker(ident.value(), spørFra, null, false).stream()
+            .map(arbeidsforhold -> mapArbeidsforholdRSTilDto(arbeidsforhold, spørFra, null))
+            .toList();
     }
 
+    public List<Arbeidsforhold> finnFrilansForIdentIPerioden(Fødselsnummer ident, LocalDate fom) {
+        return aaregRestKlient.finnArbeidsforholdForArbeidstaker(ident.value(), fom, null,
+                Optional.of(ArbeidType.FRILANSER_OPPDRAGSTAKER_MED_MER), true).stream()
+            .map(arbeidsforhold -> mapArbeidsforholdRSTilDto(arbeidsforhold, fom, null))
+            .toList();
+    }
+
+    public List<Arbeidsforhold> finnAlleArbeidsforholdForIdentIPerioden(Fødselsnummer ident, LocalDate fom, LocalDate tom) {
+        return aaregRestKlient.finnArbeidsforholdForArbeidstaker(ident.value(), fom, tom, true).stream()
+            .map(arbeidsforhold -> mapArbeidsforholdRSTilDto(arbeidsforhold, fom, tom))
+            .toList();
+    }
 
     private Arbeidsforhold mapArbeidsforholdRSTilDto(ArbeidsforholdRS arbeidsforhold, LocalDate fom, LocalDate tom) {
         var intervall = new LocalDateInterval(safeFom(fom), safeTom(tom));
+
+        var ansettelsesPeriode = byggAnsettelsesPeriodeRS(arbeidsforhold);
+
         var arbeidsavtaler = arbeidsforhold.arbeidsavtaler()
             .stream()
             .map(this::byggArbeidsavtaleRS)
             .filter(av -> overlapperMedIntervall(av, intervall))
-            .toList();
+            .collect(Collectors.collectingAndThen(Collectors.toList(), LocalDateTimeline::new))
+            .intersection(ansettelsesPeriode);
 
-        var permisjoner = arbeidsforhold.getPermisjonPermitteringer().stream().map(this::byggPermisjonRS).toList();
-        var ansettelsesPeriode = byggAnsettelsesPeriodeRS(arbeidsforhold);
-        return new Arbeidsforhold(utledArbeidsgiverRS(arbeidsforhold),
-            ansettelsesPeriode,
-            arbeidsavtaler,
-            permisjoner);
+        var permisjoner = arbeidsforhold.getPermisjonPermitteringer().stream()
+            .map(this::byggPermisjonRS)
+            .collect(Collectors.collectingAndThen(Collectors.toList(),
+                datoSegmenter -> new LocalDateTimeline<>(datoSegmenter, StandardCombinators::concatLists)))
+            .intersection(ansettelsesPeriode);
+
+
+        return new Arbeidsforhold(utledArbeidsgiverRS(arbeidsforhold), ansettelsesPeriode, arbeidsavtaler, permisjoner);
     }
 
 
     private ArbeidsforholdIdentifikator utledArbeidsgiverRS(ArbeidsforholdRS arbeidsforhold) {
         // Forenklet oppgjørsordning fra persom har ikke arbeidsforholdId
         return switch (arbeidsforhold.arbeidsgiver().type()) {
-            case Person -> new ArbeidsforholdIdentifikator(arbeidsforhold.arbeidsgiver().aktoerId(),
+            case PERSON -> new ArbeidsforholdIdentifikator(arbeidsforhold.arbeidsgiver().offentligIdent(),
                 UUID.nameUUIDFromBytes(arbeidsforhold.type().getOffisiellKode().getBytes(StandardCharsets.UTF_8)).toString(), arbeidsforhold.type());
-            case Organisasjon -> new ArbeidsforholdIdentifikator(arbeidsforhold.arbeidsgiver().organisasjonsnummer(),
+            case ORGANISASJON -> new ArbeidsforholdIdentifikator(arbeidsforhold.arbeidsgiver().organisasjonsnummer(),
                 arbeidsforhold.arbeidsforholdId(), arbeidsforhold.type());
         };
     }
@@ -68,24 +93,28 @@ public class ArbeidsforholdTjeneste {
         return new LocalDateInterval(ansettelseFom, ansettelseTom);
     }
 
-    private Arbeidsavtale byggArbeidsavtaleRS(ArbeidsforholdRS.ArbeidsavtaleRS arbeidsavtale) {
-        var stillingsprosent = Stillingsprosent.arbeid(safeProsent(arbeidsavtale.stillingsprosent()));
+    private LocalDateSegment<Stillingsprosent> byggArbeidsavtaleRS(ArbeidsforholdRS.ArbeidsavtaleRS arbeidsavtale) {
+        var stillingsprosent = arbeidsavtale.stillingsprosent() != null
+            ? Stillingsprosent.arbeid(safeProsent(arbeidsavtale.stillingsprosent()))
+            : Stillingsprosent.nullProsent();
         var arbeidsavtaleFom = safeFom(arbeidsavtale.gyldighetsperiode().fom());
         var arbeidsavtaleTom = safeTom(arbeidsavtale.gyldighetsperiode().tom());
         var periode = new LocalDateInterval(arbeidsavtaleFom, arbeidsavtaleTom);
-        return new Arbeidsavtale(periode, stillingsprosent);
+        return new LocalDateSegment<>(periode, stillingsprosent);
     }
 
-    private Permisjon byggPermisjonRS(ArbeidsforholdRS.PermisjonPermitteringRS permisjonPermitteringRS) {
-        var permisjonprosent = Stillingsprosent.arbeid(safeProsent(permisjonPermitteringRS.prosent()));
+    private LocalDateSegment<List<Permisjon>> byggPermisjonRS(ArbeidsforholdRS.PermisjonPermitteringRS permisjonPermitteringRS) {
+        var permisjonprosent = permisjonPermitteringRS.prosent() != null
+            ? Stillingsprosent.arbeid(permisjonPermitteringRS.prosent())
+            : Stillingsprosent.nullProsent();
         var permisjonFom = safeFom(permisjonPermitteringRS.periode().fom());
         var permisjonTom = safeTom(permisjonPermitteringRS.periode().tom());
         var periode = new LocalDateInterval(permisjonFom, permisjonTom);
-        return new Permisjon(periode, permisjonprosent, permisjonPermitteringRS.type());
+        return new LocalDateSegment<>(periode, List.of(new Permisjon(permisjonprosent, permisjonPermitteringRS.type())));
     }
 
-    private boolean overlapperMedIntervall(Arbeidsavtale av, LocalDateInterval intervall) {
-        return intervall.overlaps(av.arbeidsavtalePeriode());
+    private boolean overlapperMedIntervall(LocalDateSegment<Stillingsprosent> av, LocalDateInterval intervall) {
+        return intervall.overlaps(av.getLocalDateInterval());
     }
 
     private LocalDate safeFom(LocalDate fom) {
